<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_marginTop="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_alignParentLeft="true"
                    android:textSize="30sp"
                    android:textColor="#ffffff"
                    android:text="@string/mainText"
                    android:id="@+id/mainTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp"
                    android:layout_below="@+id/mainTitle"
                    android:textColor="#ffffff"
                    android:text="@string/optionSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>

        <GridLayout
                android:padding="20dp"
                android:columnCount="1"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/dundeeCard"
                android:clickable="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="12dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="#ffffff">

                <LinearLayout
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                    <ImageView
                            android:src="@drawable/dundee"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                    <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:text="@string/dundee_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/edinburghCard"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="12dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="#ffffff">

                <LinearLayout
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                    <ImageView
                            android:src="@drawable/edinburgh"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                    <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:text="@string/edinburgh_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:id="@+id/notesCard"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="12dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    app:cardBackgroundColor="#f1f1f1">
                <LinearLayout
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:text="@string/notes"
                            android:id="@+id/notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_marginTop="12dp"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:text="@string/visited_notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>